HIP-1056 support latest block stream spec - phase 1 (#12000)
- Bump up hedera-protobuf-java-api to v0.65.1
- Read trace data block items
- Read non-transactional statechanges at new location
- Support HIP-1127 unified transaction record format
- Support 8 subtrees in block root hash calculation
- Support reconstruction of ContractCallResult / ContractFunctionResult
- Add blocknode spring profile
- Update design doc

Signed-off-by: Xin Li <xin@hashgraph.com>