@@ -3,7 +3,6 @@
 package org.hiero.mirror.common.domain.transaction;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.hiero.mirror.common.domain.transaction.StateChangeContext.EMPTY_CONTEXT;
 
 import com.hedera.hapi.block.stream.output.protoc.CallContractOutput;
@@ -16,24 +15,31 @@ import com.hedera.hapi.block.stream.output.protoc.StateIdentifier;
 import com.hedera.hapi.block.stream.output.protoc.TransactionOutput;
 import com.hedera.hapi.block.stream.output.protoc.TransactionOutput.TransactionCase;
 import com.hedera.hapi.block.stream.output.protoc.TransactionResult;
+import com.hedera.hapi.block.stream.trace.protoc.AutoAssociateTraceData;
+import com.hedera.hapi.block.stream.trace.protoc.EvmTraceData;
+import com.hedera.hapi.block.stream.trace.protoc.SubmitMessageTraceData;
+import com.hedera.hapi.block.stream.trace.protoc.TraceData;
 import com.hederahashgraph.api.proto.java.ResponseCodeEnum;
 import com.hederahashgraph.api.proto.java.SignedTransaction;
 import com.hederahashgraph.api.proto.java.Timestamp;
 import com.hederahashgraph.api.proto.java.Token;
 import com.hederahashgraph.api.proto.java.TokenID;
-import com.hederahashgraph.api.proto.java.Transaction;
+import com.hederahashgraph.api.proto.java.TransactionBody;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-import org.hiero.mirror.common.domain.DomainBuilder;
-import org.hiero.mirror.common.exception.ProtobufException;
+import java.util.stream.Stream;
+import lombok.SneakyThrows;
+import org.apache.commons.codec.binary.Hex;
+import org.assertj.core.api.InstanceOfAssertFactories;
 import org.hiero.mirror.common.util.DomainUtils;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.EnumSource;
+import org.junit.jupiter.params.provider.MethodSource;
 
-class BlockItemTest {
-    private final DomainBuilder domainBuilder = new DomainBuilder();
+final class BlockTransactionTest {
 
     @ParameterizedTest
     @EnumSource(
@@ -41,19 +47,13 @@ class BlockItemTest {
             names = {"FEE_SCHEDULE_FILE_PART_UPLOADED", "SUCCESS", "SUCCESS_BUT_MISSING_EXPECTED_OPERATION"})
     void parseSuccessWhenNoParentPresentAndCorrectStatusReturnTrue(ResponseCodeEnum status) {
         var transactionResult = TransactionResult.newBuilder().setStatus(status).build();
+        var blockTransaction =
+                defaultBuilder().transactionResult(transactionResult).build();
 
-        var blockItem = BlockItem.builder()
-                .transaction(Transaction.newBuilder().build())
-                .transactionResult(transactionResult)
-                .transactionOutputs(Map.of())
-                .stateChanges(List.of())
-                .previous(null)
-                .build();
-
-        assertThat(blockItem)
-                .returns(0L, BlockItem::getConsensusTimestamp)
-                .returns(null, BlockItem::getParentConsensusTimestamp)
-                .returns(true, BlockItem::isSuccessful);
+        assertThat(blockTransaction)
+                .returns(0L, BlockTransaction::getConsensusTimestamp)
+                .returns(null, BlockTransaction::getParentConsensusTimestamp)
+                .returns(true, BlockTransaction::isSuccessful);
     }
 
     @ParameterizedTest
@@ -61,67 +61,48 @@ class BlockItemTest {
             value = ResponseCodeEnum.class,
             names = {"FEE_SCHEDULE_FILE_PART_UPLOADED", "SUCCESS", "SUCCESS_BUT_MISSING_EXPECTED_OPERATION"})
     void parseSuccessWithSuccessfulParentAndCorrectStatusReturnTrue(ResponseCodeEnum status) {
-
-        var parentBlockItem = BlockItem.builder()
-                .transaction(Transaction.newBuilder().build())
+        var parentBlockTransaction = defaultBuilder()
                 .transactionResult(TransactionResult.newBuilder()
                         .setStatus(status)
                         .setConsensusTimestamp(Timestamp.newBuilder().setSeconds(12345L))
                         .build())
-                .transactionOutputs(Map.of())
-                .stateChanges(List.of())
-                .previous(null)
                 .build();
-
         var transactionResult = TransactionResult.newBuilder()
                 .setConsensusTimestamp(Timestamp.newBuilder().setSeconds(12346L))
                 .setStatus(status)
                 .setParentConsensusTimestamp(
                         Timestamp.newBuilder().setSeconds(12345L).build())
                 .build();
-
-        var blockItem = BlockItem.builder()
-                .transaction(Transaction.newBuilder().build())
+        var blockTransaction = defaultBuilder()
+                .previous(parentBlockTransaction)
                 .transactionResult(transactionResult)
-                .transactionOutputs(Map.of())
-                .stateChanges(List.of())
-                .previous(parentBlockItem)
                 .build();
 
-        assertThat(blockItem)
-                .returns(12346000000000L, BlockItem::getConsensusTimestamp)
-                .returns(12345000000000L, BlockItem::getParentConsensusTimestamp)
-                .returns(true, BlockItem::isSuccessful);
+        assertThat(blockTransaction)
+                .returns(12346000000000L, BlockTransaction::getConsensusTimestamp)
+                .returns(12345000000000L, BlockTransaction::getParentConsensusTimestamp)
+                .returns(true, BlockTransaction::isSuccessful);
     }
 
     @Test
     void parseSuccessParentNotSuccessfulReturnFalse() {
-        var parentBlockItem = BlockItem.builder()
-                .transaction(Transaction.newBuilder().build())
+        var parentBlockTransaction = defaultBuilder()
                 .transactionResult(TransactionResult.newBuilder()
                         .setStatus(ResponseCodeEnum.INVALID_TRANSACTION)
                         .setConsensusTimestamp(Timestamp.newBuilder().setSeconds(12345L))
                         .build())
-                .transactionOutputs(Map.of())
-                .stateChanges(List.of())
-                .previous(null)
                 .build();
-
         var transactionResult = TransactionResult.newBuilder()
                 .setStatus(ResponseCodeEnum.SUCCESS)
                 .setParentConsensusTimestamp(
                         Timestamp.newBuilder().setSeconds(12345L).build())
                 .build();
-
-        var blockItem = BlockItem.builder()
-                .transaction(Transaction.newBuilder().build())
+        var blockTransaction = defaultBuilder()
+                .previous(parentBlockTransaction)
                 .transactionResult(transactionResult)
-                .transactionOutputs(Map.of())
-                .stateChanges(List.of())
-                .previous(parentBlockItem)
                 .build();
 
-        assertThat(blockItem.isSuccessful()).isFalse();
+        assertThat(blockTransaction.isSuccessful()).isFalse();
     }
 
     @ParameterizedTest
@@ -129,33 +110,23 @@ class BlockItemTest {
             value = ResponseCodeEnum.class,
             names = {"FEE_SCHEDULE_FILE_PART_UPLOADED", "SUCCESS", "SUCCESS_BUT_MISSING_EXPECTED_OPERATION"})
     void parseSuccessParentSuccessfulButStatusNotOneOfTheExpectedReturnFalse(ResponseCodeEnum status) {
-
-        var parentBlockItem = BlockItem.builder()
-                .transaction(Transaction.newBuilder().build())
+        var parentBlockTransaction = defaultBuilder()
                 .transactionResult(TransactionResult.newBuilder()
                         .setStatus(status)
                         .setConsensusTimestamp(Timestamp.newBuilder().setSeconds(12345L))
                         .build())
-                .transactionOutputs(Map.of())
-                .stateChanges(List.of())
-                .previous(null)
                 .build();
-
         var transactionResult = TransactionResult.newBuilder()
                 .setStatus(ResponseCodeEnum.BUSY)
                 .setParentConsensusTimestamp(Timestamp.newBuilder().setSeconds(12345L))
                 .build();
-
-        var blockItem = BlockItem.builder()
-                .transaction(Transaction.newBuilder().build())
+        var blockTransaction = defaultBuilder()
+                .previous(parentBlockTransaction) // Parent is successful but status is not one of the expected
                 .transactionResult(transactionResult)
-                .transactionOutputs(Map.of())
-                .stateChanges(List.of())
-                .previous(parentBlockItem) // Parent is successful but status is not one of the expected
                 .build();
 
         // Assert: The block item should not be successful because the status is not one of the expected ones
-        assertThat(blockItem.isSuccessful()).isFalse();
+        assertThat(blockTransaction.isSuccessful()).isFalse();
     }
 
     @Test
@@ -163,17 +134,11 @@ class BlockItemTest {
         var transactionResult = TransactionResult.newBuilder()
                 .setStatus(ResponseCodeEnum.SUCCESS)
                 .build();
-
-        var blockItem = BlockItem.builder()
-                .transaction(Transaction.newBuilder().build())
-                .transactionResult(transactionResult)
-                .transactionOutputs(Map.of())
-                .stateChanges(List.of())
-                .previous(null)
-                .build();
+        var blockTransaction =
+                defaultBuilder().transactionResult(transactionResult).build();
 
         // When, Then: The parent should remain null
-        assertThat(blockItem.getParent()).isNull();
+        assertThat(blockTransaction.getParent()).isNull();
     }
 
     @Test
@@ -183,30 +148,18 @@ class BlockItemTest {
                 .setParentConsensusTimestamp(
                         Timestamp.newBuilder().setSeconds(12345L).build())
                 .build();
-
-        var previousTransaction = Transaction.newBuilder().build();
         var previousTransactionResult = TransactionResult.newBuilder()
                 .setConsensusTimestamp(Timestamp.newBuilder().setSeconds(12345L).build())
                 .build();
-
-        var previousBlockItem = BlockItem.builder()
-                .transaction(previousTransaction)
-                .transactionResult(previousTransactionResult)
-                .transactionOutputs(Map.of())
-                .stateChanges(List.of())
-                .previous(null)
-                .build();
-
-        var blockItem = BlockItem.builder()
-                .transaction(Transaction.newBuilder().build())
+        var previousBlockTransaction =
+                defaultBuilder().transactionResult(previousTransactionResult).build();
+        var blockTransaction = defaultBuilder()
+                .previous(previousBlockTransaction)
                 .transactionResult(transactionResult)
-                .transactionOutputs(Map.of())
-                .stateChanges(List.of())
-                .previous(previousBlockItem)
                 .build();
 
         // When, Then: The parent should match the previous block item
-        assertThat(blockItem.getParent()).isSameAs(previousBlockItem);
+        assertThat(blockTransaction.getParent()).isSameAs(previousBlockTransaction);
     }
 
     @Test
@@ -217,30 +170,18 @@ class BlockItemTest {
                 .setParentConsensusTimestamp(
                         Timestamp.newBuilder().setSeconds(12345L).build())
                 .build();
-
-        var previousTransaction = Transaction.newBuilder().build();
         var previousTransactionResult = TransactionResult.newBuilder()
                 .setConsensusTimestamp(Timestamp.newBuilder().setSeconds(67890L).build())
                 .build();
-
-        var previousBlockItem = BlockItem.builder()
-                .transaction(previousTransaction)
-                .transactionResult(previousTransactionResult)
-                .transactionOutputs(Map.of())
-                .stateChanges(List.of())
-                .previous(null)
-                .build();
-
-        var blockItem = BlockItem.builder()
-                .transaction(Transaction.newBuilder().build())
+        var previousBlockTransaction =
+                defaultBuilder().transactionResult(previousTransactionResult).build();
+        var blockTransaction = defaultBuilder()
+                .previous(previousBlockTransaction)
                 .transactionResult(transactionResult)
-                .transactionOutputs(Map.of())
-                .stateChanges(List.of())
-                .previous(previousBlockItem)
                 .build();
 
         // When, Then: The parent should not match, return the parent as is
-        assertThat(blockItem.getParent()).isNotEqualTo(previousBlockItem);
+        assertThat(blockTransaction.getParent()).isNotEqualTo(previousBlockTransaction);
     }
 
     @Test
@@ -248,43 +189,27 @@ class BlockItemTest {
         var parentTransactionResult = TransactionResult.newBuilder()
                 .setConsensusTimestamp(Timestamp.newBuilder().setSeconds(12345L).build()) // Parent timestamp
                 .build();
-
-        var parentBlockItem = BlockItem.builder()
-                .transaction(Transaction.newBuilder().build())
-                .transactionResult(parentTransactionResult)
-                .transactionOutputs(Map.of())
-                .stateChanges(List.of())
-                .previous(null)
-                .build();
-
+        var parentBlockTransaction =
+                defaultBuilder().transactionResult(parentTransactionResult).build();
         var previousTransactionResult = TransactionResult.newBuilder()
                 .setConsensusTimestamp(Timestamp.newBuilder().setSeconds(12346L).build())
                 .setParentConsensusTimestamp(parentTransactionResult.getConsensusTimestamp())
                 .build();
-
-        var previousBlockItem = BlockItem.builder()
-                .transaction(Transaction.newBuilder().build())
+        var previousBlockTransaction = defaultBuilder()
+                .previous(parentBlockTransaction)
                 .transactionResult(previousTransactionResult)
-                .transactionOutputs(Map.of())
-                .stateChanges(List.of())
-                .previous(parentBlockItem)
                 .build();
-
         var transactionResult = TransactionResult.newBuilder()
                 .setParentConsensusTimestamp(
                         Timestamp.newBuilder().setSeconds(12345L).build())
                 .setConsensusTimestamp(Timestamp.newBuilder().setSeconds(12347L).build())
                 .build();
-
-        var blockItem = BlockItem.builder()
-                .transaction(Transaction.newBuilder().build())
+        var blockTransaction = defaultBuilder()
+                .previous(previousBlockTransaction)
                 .transactionResult(transactionResult)
-                .transactionOutputs(Map.of())
-                .stateChanges(List.of())
-                .previous(previousBlockItem)
                 .build();
 
-        assertThat(blockItem.getParent()).isSameAs(parentBlockItem);
+        assertThat(blockTransaction.getParent()).isSameAs(parentBlockTransaction);
     }
 
     @Test
@@ -292,13 +217,7 @@ class BlockItemTest {
         // given
         var parentConsensusTimestamp = Timestamp.newBuilder().setSeconds(12345L).build();
         var tokenId = TokenID.newBuilder().setTokenNum(123L).build();
-        var parent = BlockItem.builder()
-                .transaction(Transaction.newBuilder().build())
-                .transactionResult(TransactionResult.newBuilder()
-                        .setConsensusTimestamp(parentConsensusTimestamp)
-                        .setStatus(ResponseCodeEnum.SUCCESS)
-                        .build())
-                .transactionOutputs(Map.of())
+        var parent = defaultBuilder()
                 .stateChanges(List.of(StateChanges.newBuilder()
                         .addStateChanges(StateChange.newBuilder()
                                 .setStateId(StateIdentifier.STATE_ID_TOKENS_VALUE)
@@ -308,35 +227,49 @@ class BlockItemTest {
                                                 .setTokenValue(
                                                         Token.newBuilder().setTokenId(tokenId)))))
                         .build()))
+                .transactionResult(TransactionResult.newBuilder()
+                        .setConsensusTimestamp(parentConsensusTimestamp)
+                        .setStatus(ResponseCodeEnum.SUCCESS)
+                        .build())
                 .build();
         var childConsensusTimestamp = Timestamp.newBuilder().setSeconds(12346L).build();
-        var child = BlockItem.builder()
-                .transaction(Transaction.newBuilder().build())
+        var child = defaultBuilder()
+                .previous(parent)
                 .transactionResult(TransactionResult.newBuilder()
                         .setConsensusTimestamp(childConsensusTimestamp)
                         .setParentConsensusTimestamp(parentConsensusTimestamp)
                         .setStatus(ResponseCodeEnum.SUCCESS)
                         .build())
-                .transactionOutputs(Map.of())
-                .stateChanges(List.of())
-                .previous(parent)
                 .build();
-        var failed = BlockItem.builder()
-                .transaction(Transaction.newBuilder().build())
+        var failed = defaultBuilder()
+                .previous(parent)
                 .transactionResult(TransactionResult.newBuilder()
                         .setConsensusTimestamp(
                                 Timestamp.newBuilder().setSeconds(12347L).build())
                         .setStatus(ResponseCodeEnum.INSUFFICIENT_TX_FEE)
                         .build())
-                .transactionOutputs(Map.of())
-                .stateChanges(List.of())
-                .previous(parent)
                 .build();
 
         // when, then
-        assertThat(child.getStateChangeContext()).isSameAs(parent.getStateChangeContext());
-        assertThat(child.getStateChangeContext().getNewTokenId()).contains(tokenId);
+        assertThat(child.getStateChangeContext())
+                .isSameAs(parent.getStateChangeContext())
+                .extracting(StateChangeContext::getNewTokenId, InstanceOfAssertFactories.optional(TokenID.class))
+                .contains(tokenId);
         assertThat(failed.getStateChangeContext()).isSameAs(EMPTY_CONTEXT);
+    }
+
+    @MethodSource("provideTransactionHashTestArguments")
+    @ParameterizedTest(name = "{0}")
+    @SneakyThrows
+    void getTransactionHash(String name, String signedTransactionHex, String expectedTransactionHash) {
+        byte[] signedTransactionBytes = Hex.decodeHex(signedTransactionHex);
+        var signedTransaction = SignedTransaction.parseFrom(signedTransactionBytes);
+        var blockTransaction = defaultBuilder()
+                .signedTransaction(signedTransaction)
+                .signedTransactionBytes(signedTransactionBytes)
+                .build();
+        assertThat(blockTransaction.getTransactionHash())
+                .isEqualTo(DomainUtils.fromBytes(Hex.decodeHex(expectedTransactionHash)));
     }
 
     @Test
@@ -345,54 +278,100 @@ class BlockItemTest {
         var callContractOutput = TransactionOutput.newBuilder()
                 .setContractCall(CallContractOutput.getDefaultInstance())
                 .build();
-        var blockItem = BlockItem.builder()
-                .transaction(Transaction.newBuilder().build())
+        var blockTransaction = defaultBuilder()
                 .transactionResult(TransactionResult.newBuilder()
                         .setStatus(ResponseCodeEnum.SUCCESS)
                         .setConsensusTimestamp(Timestamp.newBuilder().setSeconds(12345L))
                         .build())
                 .transactionOutputs(Map.of(TransactionCase.CONTRACT_CALL, callContractOutput))
-                .stateChanges(List.of())
-                .previous(null)
                 .build();
 
         // when, then
-        assertThat(blockItem.getTransactionOutput(TransactionCase.CONTRACT_CALL))
+        assertThat(blockTransaction.getTransactionOutput(TransactionCase.CONTRACT_CALL))
                 .contains(callContractOutput);
-        assertThat(blockItem.getTransactionOutput(TransactionCase.CONTRACT_CREATE))
+        assertThat(blockTransaction.getTransactionOutput(TransactionCase.CONTRACT_CREATE))
                 .isEmpty();
     }
 
     @Test
-    void corruptedTransactionBodyBytes() {
+    void allTraceData() {
         // given
-        var blockItem = BlockItem.builder()
-                .transaction(Transaction.newBuilder()
-                        .setSignedTransactionBytes(SignedTransaction.newBuilder()
-                                .setBodyBytes(DomainUtils.fromBytes(domainBuilder.bytes(512)))
-                                .build()
-                                .toByteString())
-                        .build())
-                .transactionResult(TransactionResult.newBuilder().build())
-                .transactionOutputs(Collections.emptyMap())
-                .stateChanges(Collections.emptyList());
+        var blockTransaction = defaultBuilder()
+                .traceData(List.of(
+                        TraceData.newBuilder()
+                                .setAutoAssociateTraceData(AutoAssociateTraceData.getDefaultInstance())
+                                .build(),
+                        TraceData.newBuilder()
+                                .setEvmTraceData(EvmTraceData.getDefaultInstance())
+                                .build(),
+                        TraceData.newBuilder()
+                                .setSubmitMessageTraceData(SubmitMessageTraceData.getDefaultInstance())
+                                .build()))
+                .build();
 
         // when, then
-        assertThatThrownBy(blockItem::build).isInstanceOf(ProtobufException.class);
+        assertThat(blockTransaction)
+                .satisfies(
+                        b -> assertThat(b.getAutoAssociateTraceData()).isNotNull(),
+                        b -> assertThat(b.getEvmTraceData()).isNotNull(),
+                        b -> assertThat(b.getSubmitMessageTraceData()).isNotNull());
     }
 
     @Test
-    void corruptedSignedTransactionBytes() {
+    void noTraceData() {
         // given
-        var blockItem = BlockItem.builder()
-                .transaction(Transaction.newBuilder()
-                        .setSignedTransactionBytes(DomainUtils.fromBytes(domainBuilder.bytes(256)))
-                        .build())
-                .transactionResult(TransactionResult.newBuilder().build())
-                .transactionOutputs(Collections.emptyMap())
-                .stateChanges(Collections.emptyList());
+        var blockTransaction = defaultBuilder().build();
 
         // when, then
-        assertThatThrownBy(blockItem::build).isInstanceOf(ProtobufException.class);
+        assertThat(blockTransaction)
+                .returns(null, BlockTransaction::getAutoAssociateTraceData)
+                .returns(null, BlockTransaction::getEvmTraceData)
+                .returns(null, BlockTransaction::getSubmitMessageTraceData);
+    }
+
+    private BlockTransaction.BlockTransactionBuilder defaultBuilder() {
+        var signedTransaction = SignedTransaction.getDefaultInstance();
+        var transactionBody = TransactionBody.getDefaultInstance();
+        return BlockTransaction.builder()
+                .transactionBody(transactionBody)
+                .signedTransaction(signedTransaction)
+                .signedTransactionBytes(signedTransaction.toByteArray())
+                .stateChanges(Collections.emptyList())
+                .traceData(Collections.emptyList())
+                .transactionOutputs(Collections.emptyMap())
+                .transactionResult(TransactionResult.getDefaultInstance());
+    }
+
+    @SneakyThrows
+    private static Stream<Arguments> provideTransactionHashTestArguments() {
+        var signedTransactionHex =
+                """
+                0a440a0f0a0908b9c1e4c00610aa07120218021202180318988c0522020878320766756e642d3536721c0a1a0a0b0a02183810\
+                80d0dbc3f4020a0b0a02180210ffcfdbc3f40212470a450a010a1a40bc3c1881027d632801f12558b9d432803ba5f3854d42b2\
+                01ecc51581126d8efd29db0ebed54cae5130eff35013d1f219ce3bd33459488e164427b5cbb21f6707\
+                """;
+        var signedTransactionHash =
+                "364747682d512bf8cdd4323a277b8bdb81734b96fcdacfccef3e213de7f29db07e8465c8d9ed05d5276108b5f2f2d1a7";
+        // fields serialized in the reverse order, sigMap first then bodyBytes
+        var invertedSignedTransactionHex =
+                """
+                12470a450a010a1a40bc3c1881027d632801f12558b9d432803ba5f3854d42b201ecc51581126d8efd29db0ebed54cae5130ef\
+                f35013d1f219ce3bd33459488e164427b5cbb21f67070a440a0f0a0908b9c1e4c00610aa07120218021202180318988c052202\
+                0878320766756e642d3536721c0a1a0a0b0a0218381080d0dbc3f4020a0b0a02180210ffcfdbc3f402\
+                """;
+        var invertedSignedTransactionHash =
+                "3a61a1a809da09aa49c44dd290fcb687243b593a34cd62c0be15b65a6424e8d49e6985afa83dc4cb0f56f5a383657f6b";
+        var signedTransaction = SignedTransaction.parseFrom(Hex.decodeHex(signedTransactionHex));
+        var legacySignedTransactionHex = Hex.encodeHexString(signedTransaction.toBuilder()
+                .setUseSerializedTxMessageHashAlgorithm(true)
+                .build()
+                .toByteArray());
+        var legacySignedTransactionHash =
+                "89e787e62ac5cbe42245bb427cb91e458ad001f3baeed2e464a4e8ca8c73a7e7b13825b72cfbbaf1127dd6a988d179c7";
+        return Stream.of(
+                Arguments.of("signed transaction", signedTransactionHex, signedTransactionHash),
+                Arguments.of(
+                        "inverted signed transaction", invertedSignedTransactionHex, invertedSignedTransactionHash),
+                Arguments.of("legacy signed transaction", legacySignedTransactionHex, legacySignedTransactionHash));
     }
 }
